# C-programming-language-exercises

./: CMakeLists.txt  README.txt  sonar-project.properties
include/: CMakeLists.txt  anychar.c  anychar.h  c_comment_remover.c  c_comment_remover.h  detab.c  detab.h  entab.c  entab.h  fold.c  fold.h  htoi.c  htoi.h  print_ranges.c  print_ranges.h  sort.c  sort.h  squeeze.c  squeeze.h  tail.c  tail.h
include/anychar/: anychar.c  anychar.h
include/clang_comment_remover/: clang_comment_remover.c  clang_comment_remover.h
include/clang_keyword_counter/: clang_keyword_counter.c  clang_keyword_counter.h  clang_keyword_tokenizer.c  clang_keyword_tokenizer.h
include/cross_referencer/: cross_reference_printer.c  cross_reference_printer.h  cross_referencer.c  cross_referencer.h
include/dcl/: dcl.c  dcl.h  dcl_tokenizer.c  dcl_tokenizer.h
include/detab/: detab.c  detab.h
include/entab/: entab.c  entab.h
include/expr/: expr.c  expr.h  op_parser.c  op_parser.h
include/fcmp/: fcmp.c  fcmp.h
include/fold/: fold.c  fold.h
include/htoi/: htoi.c  htoi.h
include/keyword_counter/: keyword_counter.c  keyword_counter.h  keyword_tokenizer.c  keyword_tokenizer.h
include/mymalloc/: mymalloc.c  mymalloc.h
include/print_ranges/: print_ranges.c  print_ranges.h
include/printer/: printer.c  printer.h
include/sort/: sort.c  sort.h
include/squeeze/: squeeze.c  squeeze.h
include/tail/: tail.c  tail.h
include/utils/: binary_tree.c  binary_tree.h  io.c  io.h  queue.c  queue.h  single_positive_int_arg_parser.c  single_positive_int_arg_parser.h  stack.c  stack.h  strings.c  strings.h
include/utils/binary_tree/: binary_tree.c  binary_tree.h
include/utils/hash_table/: hash_table.c  hash_table.h
include/utils/io/: io.c  io.h
include/utils/list/: list.c  list.h
include/utils/qsort/: qsort.c  qsort.h
include/utils/queue/: queue.c  queue.h
include/utils/single_positive_int_arg_parser/: single_positive_int_arg_parser.c  single_positive_int_arg_parser.h
include/utils/stack/: stack.c  stack.h
include/utils/strings/: strings.c  strings.h
include/utils/test_utils/: test_utils.c  test_utils.h
include/utils/word_tokenizer/: word_tokenizer.c  word_tokenizer.h
include/word_frequency/: word_frequency.c  word_frequency.h
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt
test/clang_keyword_counter/: CMakeLists.txt
test/clang_keyword_counter/clang_keyword_counter/: CMakeLists.txt  clang_keyword_counter_tests.c  test_1.txt
test/clang_keyword_counter/clang_keyword_tokenizer/: CMakeLists.txt  clang_keyword_tokenizer_tests.c  test_1.txt  test_4.txt  test_5.txt  test_6.txt
test/cross_referencer/: CMakeLists.txt  cross_referencer_tests.c  test-2.ans.txt  test-2.txt
test/dcl/: CMakeLists.txt
test/dcl/dcl/: CMakeLists.txt  dcl_tests.c  test_10.txt  test_11.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
test/dcl/dcl_tokenizer/: CMakeLists.txt  dcl_tokenizer_tests.c  test_10.txt  test_3.txt  test_4.txt  test_5.txt  test_9.txt
test/expr/: CMakeLists.txt  expr_tests.c
test/fcmp/: CMakeLists.txt  fcmp_tests.c
test/keyword_counter/: CMakeLists.txt
test/keyword_counter/keyword_counter/: CMakeLists.txt  keyword_counter_tests.c
test/keyword_counter/keyword_tokenizer/: CMakeLists.txt  keyword_tokenizer_tests.c  test_2.txt  test_3.txt
test/mymalloc/: CMakeLists.txt  mymalloc_tests.c
test/printer/: CMakeLists.txt  printer_tests.c  test-2.ans.txt  test-2.txt  test-3.ans.txt  test-4.txt  test-5.ans.txt  test-5.txt  test-6.ans.txt  test-6.txt  test-7.ans.txt  test-7.txt
test/sort/: CMakeLists.txt  sort_test_1_ans.txt  sort_test_2.txt  sort_test_2_ans.txt  sort_test_3.txt  sort_test_3_ans.txt  sort_test_4.txt  sort_test_4_ans.txt  sort_tests.c
test/tail/: CMakeLists.txt  tail_tests.c  test1.txt
test/utils/: CMakeLists.txt
test/utils/binary_tree/: CMakeLists.txt  binary_tree_tests.c
test/utils/hash_table/: CMakeLists.txt  hash_table_tests.c
test/utils/io/: CMakeLists.txt  io_tests.c
test/utils/list/: CMakeLists.txt  list_tests.c
test/utils/qsort/: CMakeLists.txt  qsort_tests.c
test/utils/queue/: CMakeLists.txt  queue_tests.c
test/utils/stack/: CMakeLists.txt  stack_tests.c
test/utils/strings/: CMakeLists.txt  strings_tests.c
test/utils/word_tokenizer/: CMakeLists.txt  test-1.txt  test-2.txt  test-3.txt  word_tokenizer_tests.c
test/word_frequency/: CMakeLists.txt  test-2.ans.txt  test-3.ans.txt  test-3.txt  word_frequency_tests.c
